sys/powerpc/include/endian.h
@@ -35,19 +35,7 @@
 #ifndef _MACHINE_ENDIAN_H_
 #define	_MACHINE_ENDIAN_H_
 
-#include <sys/cdefs.h>
 #include <sys/_types.h>
-
-/*
- * Define the order of 32-bit words in 64-bit words.
- */
-#ifdef __LITTLE_ENDIAN__
-#define	_QUAD_HIGHWORD 1
-#define	_QUAD_LOWWORD 0
-#else
-#define	_QUAD_HIGHWORD 0
-#define	_QUAD_LOWWORD 1
-#endif
 
 /*
  * GCC defines _BIG_ENDIAN and _LITTLE_ENDIAN equal to __BIG_ENDIAN__
@@ -60,94 +48,6 @@
 #undef _LITTLE_ENDIAN
 #endif
 
-/*
- * Definitions for byte order, according to byte significance from low
- * address to high.
- */
-#define	_LITTLE_ENDIAN	1234	/* LSB first: i386, vax */
-#define	_BIG_ENDIAN	4321	/* MSB first: 68000, ibm, net */
-#define	_PDP_ENDIAN	3412	/* LSB first in word, MSW first in long */
-
-#ifdef __LITTLE_ENDIAN__
-#define	_BYTE_ORDER	_LITTLE_ENDIAN
-#else
-#define	_BYTE_ORDER	_BIG_ENDIAN
-#endif
-
-/*
- * Deprecated variants that don't have enough underscores to be useful in more
- * strict namespaces.
- */
-#if __BSD_VISIBLE
-#define	LITTLE_ENDIAN	_LITTLE_ENDIAN
-#define	BIG_ENDIAN	_BIG_ENDIAN
-#define	PDP_ENDIAN	_PDP_ENDIAN
-#define	BYTE_ORDER	_BYTE_ORDER
-#endif
-
-#if defined(__GNUCLIKE_BUILTIN_CONSTANT_P)
-#define	__is_constant(x)	__builtin_constant_p(x)
-#else
-#define	__is_constant(x)	0
-#endif
-
-#define	__bswap16_const(x)	((((__uint16_t)(x) >> 8) & 0xff) |	\
-	(((__uint16_t)(x) << 8) & 0xff00))
-#define	__bswap32_const(x)	((((__uint32_t)(x) >> 24) & 0xff) |	\
-	(((__uint32_t)(x) >> 8) & 0xff00) |				\
-	(((__uint32_t)(x)<< 8) & 0xff0000) |				\
-	(((__uint32_t)(x) << 24) & 0xff000000))
-#define	__bswap64_const(x)	((((__uint64_t)(x) >> 56) & 0xff) |	\
-	(((__uint64_t)(x) >> 40) & 0xff00) |				\
-	(((__uint64_t)(x) >> 24) & 0xff0000) |				\
-	(((__uint64_t)(x) >> 8) & 0xff000000) |				\
-	(((__uint64_t)(x) << 8) & ((__uint64_t)0xff << 32)) |		\
-	(((__uint64_t)(x) << 24) & ((__uint64_t)0xff << 40)) |		\
-	(((__uint64_t)(x) << 40) & ((__uint64_t)0xff << 48)) |		\
-	(((__uint64_t)(x) << 56) & ((__uint64_t)0xff << 56)))
-
-static __inline __uint16_t
-__bswap16_var(__uint16_t _x)
-{
-
-	return ((_x >> 8) | ((_x << 8) & 0xff00));
-}
-
-static __inline __uint32_t
-__bswap32_var(__uint32_t _x)
-{
-
-	return ((_x >> 24) | ((_x >> 8) & 0xff00) | ((_x << 8) & 0xff0000) |
-	    ((_x << 24) & 0xff000000));
-}
-
-static __inline __uint64_t
-__bswap64_var(__uint64_t _x)
-{
-
-	return ((_x >> 56) | ((_x >> 40) & 0xff00) | ((_x >> 24) & 0xff0000) |
-	    ((_x >> 8) & 0xff000000) | ((_x << 8) & ((__uint64_t)0xff << 32)) |
-	    ((_x << 24) & ((__uint64_t)0xff << 40)) |
-	    ((_x << 40) & ((__uint64_t)0xff << 48)) | ((_x << 56)));
-}
-
-#define	__bswap16(x)	((__uint16_t)(__is_constant(x) ? __bswap16_const(x) : \
-	__bswap16_var(x)))
-#define	__bswap32(x)	(__is_constant(x) ? __bswap32_const(x) : \
-	__bswap32_var(x))
-#define	__bswap64(x)	(__is_constant(x) ? __bswap64_const(x) : \
-	__bswap64_var(x))
-
-#ifdef __LITTLE_ENDIAN__
-#define	__htonl(x)	(__bswap32((__uint32_t)(x)))
-#define	__htons(x)	(__bswap16((__uint16_t)(x)))
-#define	__ntohl(x)	(__bswap32((__uint32_t)(x)))
-#define	__ntohs(x)	(__bswap16((__uint16_t)(x)))
-#else
-#define	__htonl(x)	((__uint32_t)(x))
-#define	__htons(x)	((__uint16_t)(x))
-#define	__ntohl(x)	((__uint32_t)(x))
-#define	__ntohs(x)	((__uint16_t)(x))
-#endif
+#include <sys/_endian.h>
 
 #endif /* !_MACHINE_ENDIAN_H_ */
